--- a/templates/certificate/certificate.html
+++ b/templates/certificate/certificate.html
@@ -1,33 +1,38 @@
 <!-- <html lang="en" dir="ltr" class="perfect-scrollbar-on"> -->
 
-  <!-- <meta charset="utf-8" name="viewport" content="​width=device-width, initial-scale=1.0"/> -->
-  
-  {% extends 'base.html' %}
-  {% load static %}
+<!-- <meta charset="utf-8" name="viewport" content="​width=device-width, initial-scale=1.0"/> -->
 
-  {% block title %}Certificates{% endblock %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block cssfile %}
+<link rel="stylesheet" href="{% static 'css/certificate/style_certificate.css' %}">
+{% endblock %}
+
+
+{% block title %}Certificates{% endblock %}
 </head>
 
 <!-- <body id="main"> -->
 
-  
-
-
-  {% block content %}
-
-  <!-- <body id="main"> -->
-  <!-- <div id="main"> -->
 
 
 
+{% block content %}
+
+<!-- <body id="main"> -->
+<!-- <div id="main"> -->
 
 
 
 
 
 
-  <!--SQUARES ANIMATION -->
-  <div class="container-fluid" id="content">
+
+
+
+<!--SQUARES ANIMATION -->
+<div class="container-fluid" id="content">
     <div class="squares square1"></div>
     <div class="squares square2"></div>
     <div class="squares square3"></div>
@@ -36,72 +41,94 @@
     <div class="squares square6"></div>
     <div class="squares square7"></div>
 
-    <!-- <header>
-      <img src="https://www.robotix.nitrr.ac.in/static/assets/img/RobotixLogo.png" class="logo-image" alt="ROBOTiX Club logo">
-      <h1 id="main-heading"><strong>ROBOTiX</strong> Club</h1>
-    </header> -->
 
-    <div>
+
+
+    {% if certificate.image %}
 
     <div class="container inner-container ">
-      <div class="row second-inner">
+        <div class="row second-inner">
+            <div class="col-lg-6">
+                <form class="certificate-form" action method="POST">
+                    {% csrf_token %}
 
-        {% if certificate.image %}
+                    <!-- <h4 id="danger" class="text-danger">Invalid !!!</h4> -->
 
-        <div class="col-lg-6">
-          <form class="certificate-form" action="" method="POST">
-            {% csrf_token %}
-            <div class="card card-register">
-              <div class="card-header">
-                <img class="card-img" src="{% static 'img/certificate/Square.jpg' %}" alt="Card image">
-                <h4 class="card-title" id="card-title" style="color:#dadada">&nbsp;RoboQuiz 2.0</h4>
-              </div>
-              <div class="card-body">
-                <h4>Certificate ID</h4>
-                <label for="url_key"></label>
-                <input type="text" name="url_key" id="certificate-id" class="form-control" placeholder="Certificate-ID" required>
-              </div>
-              <div class="card-footer submit-section">
-                <button type="submit" name="Submit" ID="submit" onclick="" class="btn btn-info btn-round btn-lg">Submit</button>&nbsp;
-              </div>
+                    <div class="card card-register">
+                        <div class="card-header">
+                            <!-- <img class="card-img" src="images/Square.jpg" alt="Card image"> -->
+                            <img class="card-img" src="{% static 'img/certificate/Square.jpg' %}" alt="Card image">
+                            <h4 class="card-title" id="card-title" style="color:#dadada">&nbsp;RoboQuiz 2.0</h4>
+                        </div>
+                        <div class="card-body">
+                            <h4>Certificate ID</h4>
+                            <input type="text" name="url_key" id="certificate-id" class="form-control" placeholder="Enter Certificate-ID" value="" required>
+                        </div>
+                        <div class="card-footer submit-section">
+                            <button type="submit" name="Submit" ID="submit" onclick="" class="btn btn-info btn-round btn-lg">Submit</button>&nbsp;
+                        </div>
+                    </div>
+                </form>
             </div>
-          </form>
-        </div>
-        <div class="col-lg-6">
-          <div class="image-container">
-            <div class="main-container">
-                <img src="/media/{{certificate.image}}" alt="">
-                <!-- <img src="https://dzf8vqv24eqhg.cloudfront.net/userfiles/2086/3660/ckfinder/images/7(4).jpg" id="certificate-image" alt="certificate"> -->
+            <div class="col-lg-6">
+                
+                <div class="image-container">
+                    <div class="main-container">
+                        <!-- <img src="images/Square.jpg" id="certificate-image" alt="certificate"> -->
+                        <img src="/media/{{certificate.image}}" alt="">
+                    </div>
+                </div>
+                <br>
+                <div class="success-container">
+                    <i class="far fa-check-circle">
+                        <h4 class="success">This certificate is verified</h4>
+                    </i>
+                </div>
             </div>
-          </div>
         </div>
-
-        {% else %}
-
-        <div class="col-lg-6">
-          <form class="certificate-form" action="" method="POST">
-            {% csrf_token %}
-            <div class="card card-register" style="margin-left:300px">
-              <div class="card-header">
-                <img class="card-img" src="{% static 'img/certificate/Square.jpg' %}" alt="Card image">
-                <h4 class="card-title" id="card-title" style="color:#dadada">&nbsp;RoboQuiz 2.0</h4>
-              </div>
-              <div class="card-body">
-                <h4>Certificate ID</h4>
-                <label for="url_key"></label>
-                <input type="text" name="url_key" id="certificate-id" class="form-control" placeholder="Certificate-ID" required>
-              </div>
-              <div class="card-footer submit-section">
-                <button type="submit" name="Submit" ID="submit" onclick="" class="btn btn-info btn-round btn-lg">Submit</button>&nbsp;
-              </div>
-            </div>
-          </form>
-        </div>
-
-        {% endif %}
-
-      </div>
     </div>
+
+
+    {% else %}
+
+
+    <div class="container inner-container ">
+        <div class="row second-inner">
+            <div class="col-lg-12">
+                <form class="certificate-form single-block" action="" method="POST">
+                    {% csrf_token %}
+                    
+                    {% if request_obj %}
+                    <h4 id="danger" class="text-danger">Invalid !!! Enter a valid ID.</h4>
+                    {% endif %}
+                    
+
+                    <div class="card card-register">
+                        <div class="card-header">
+                            <!-- <img class="card-img" src="images/Square.jpg" alt="Card image"> -->
+                            <img class="card-img" src="{% static 'img/certificate/Square.jpg' %}" alt="Card image">
+                            <h4 class="card-title" id="card-title" style="color:#dadada">&nbsp;RoboQuiz 2.0</h4>
+                        </div>
+                        <div class="card-body">
+                            <h4>Certificate ID</h4>
+                            <input type="text" name="url_key" id="certificate-id" class="form-control" placeholder="Enter Certificate-ID" value="" required>
+                        </div>
+                        <div class="card-footer submit-section">
+                            <button type="submit" name="Submit" ID="submit" onclick="" class="btn btn-info btn-round btn-lg">Submit</button>&nbsp;
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+    
+
+    {% endif %}
+
+
+
 </div>
 
 {% endblock %}
