--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
   <!-- Nucleo Icons -->
   <link href='{% static "assets/css/nucleo-icons.css" %}' rel="stylesheet" />
   <!-- CSS Files -->
-  <link href='{% static "assets/scss/mrao-design.scss" %}' rel="stylesheet"/>
+  <link href='{% static "assets/scss/mrao-design.scss" %}' rel="stylesheet" />
   <link href='{% static "assets/css/mrao-design-page.css" %}' rel="stylesheet" />
 
   <!-- <link rel="stylesheet" href="{% static 'css/certificate/style_certificate.css' %}"> -->
@@ -39,9 +39,10 @@
       <div class="navbar-translate">
         <a class="navbar-brand" href='{% url "index" %}' rel="tooltip" title="" data-placement="bottom">
           <img src='{% static "assets/img/RobotixLogo.png" %}' width="40" height="37">
-          <span>   ROBOTiX</span> Club
+          <span> ROBOTiX</span> Club
         </a>
-        <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
+          aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-bar bar1"></span>
           <span class="navbar-toggler-bar bar2"></span>
           <span class="navbar-toggler-bar bar3"></span>
@@ -56,7 +57,8 @@
               </a>
             </div>
             <div class="col-4 collapse-close text-right">
-              <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+              <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navigation"
+                aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="mrao-icons icon-simple-remove"></i>
               </button>
             </div>
@@ -65,7 +67,7 @@
         <ul class="navbar-nav">
           <li class="nav-item p-0">
             <a class="nav-link" href='{% url "about" %}' target="">About Us</a>
-          </a>
+            </a>
           </li>
           <li class="nav-item p-0">
             <a class="nav-link" href='{% url "event" %}' target="">Events</a>
@@ -78,27 +80,30 @@
             </a>
           </li>
           <li class="dropdown nav-item p-0">
-                      <a href="" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                        More
-                      </a>
-                      <div class="dropdown-menu dropdown-with-icons">
-                        <a href='{% url "gallery" %}' target="" class="dropdown-item">
-                          <i class="mrao-icons icon-image-02"></i> Gallery
-                        </a>
-                        <a href='{% url "info:diy" %}' target="" class="dropdown-item">
-                          <i class="mrao-icons icon-settings"></i> DIY
-                        </a>
-                        <a href='{% url "info:fyi" %}' target="" class="dropdown-item">
-                          <i class="mrao-icons icon-tap-02"></i> FYI
-                        </a>
-                        <a href='{% url "robothon:problem-statement" %}' target="" class="dropdown-item">
-                          <i class="mrao-icons icon-paper"></i> Problem Statements
-                        </a>
-                        <a href='{% url "workshops:recruitment" %}' target="" class="dropdown-item">
-                          <i class="fa fa-plus"></i> Recruitment
-                        </a>
-                      </div>
-                    </li>
+            <a href="" class="dropdown-toggle nav-link" data-toggle="dropdown">
+              More
+            </a>
+            <div class="dropdown-menu dropdown-with-icons">
+              <a href='{% url "gallery" %}' target="" class="dropdown-item">
+                <i class="mrao-icons icon-image-02"></i> Gallery
+              </a>
+              <a href='{% url "info:diy" %}' target="" class="dropdown-item">
+                <i class="mrao-icons icon-settings"></i> DIY
+              </a>
+              <a href='{% url "info:fyi" %}' target="" class="dropdown-item">
+                <i class="mrao-icons icon-tap-02"></i> FYI
+              </a>
+              <a href='{% url "robothon:problem-statement" %}' target="" class="dropdown-item">
+                <i class="mrao-icons icon-paper"></i> Problem Statements
+              </a>
+              <a href='{% url "workshops:recruitment" %}' target="" class="dropdown-item">
+                <i class="fa fa-plus"></i> Recruitment
+              </a>
+              <a href='{% url "certificate:enter_id" %}' target="" class="dropdown-item">
+                <i class="fa fa-plus"></i> Certificates
+              </a>
+            </div>
+          </li>
 
           <li class="nav-item p-0">
             <a class="nav-link" href='{% url "contact" %}' target="">Contact Us</a>
@@ -111,23 +116,23 @@
               {% if user.is_authenticated %}
               <a href='{% url "users:account_profile" %}' target="" class="dropdown-item" value="">
                 <i class="mrao-icons icon-single-02"></i> My Account
-              <a href='{% url "logout" %}' target="" class="dropdown-item" value="">
-                <i class="mrao-icons icon-button-power"></i> Log Out
-              {% else %}
-              <a href='{% url "users:account_login" %}' target="" class="dropdown-item" value="">
-                <i class="mrao-icons icon-key-25"></i> Log In
-              </a>
-              {% endif %}
-              <div class="dropdown-divider"></div>
-              {% if user.is_authenticated %}
-              <a href='{% url "users:change" %}' target="" class="dropdown-item" value="">
-                <i class="mrao-icons icon-settings"></i> Change Password
-              </a>
-              {% else %}
-              <a href='{% url "users:account_signup" %}' target="" class="dropdown-item">
-                <i class="mrao-icons icon-pencil"></i> Sign Up
-              </a>
-              {% endif %}
+                <a href='{% url "logout" %}' target="" class="dropdown-item" value="">
+                  <i class="mrao-icons icon-button-power"></i> Log Out
+                  {% else %}
+                  <a href='{% url "users:account_login" %}' target="" class="dropdown-item" value="">
+                    <i class="mrao-icons icon-key-25"></i> Log In
+                  </a>
+                  {% endif %}
+                  <div class="dropdown-divider"></div>
+                  {% if user.is_authenticated %}
+                  <a href='{% url "users:change" %}' target="" class="dropdown-item" value="">
+                    <i class="mrao-icons icon-settings"></i> Change Password
+                  </a>
+                  {% else %}
+                  <a href='{% url "users:account_signup" %}' target="" class="dropdown-item">
+                    <i class="mrao-icons icon-pencil"></i> Sign Up
+                  </a>
+                  {% endif %}
             </div>
         </ul>
       </div>
@@ -144,9 +149,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <a href='{% url "index" %}' target="" class="nav-link"><h1 class="title text-info">ROBOTiX Club</h1></a>
-          <h6><a class="nav-link" target="_blank" href="https://www.google.com/maps/place/National+Institute+of+Technology,+Raipur/@21.2497222,81.6028404,17z/data=!3m1!4b1!4m5!3m4!1s0x3a28dde213f66723:0x21543965c50c43c7!8m2!3d21.2497222!4d81.6050291">
-                NIT Raipur<br>
+          <a href='{% url "index" %}' target="" class="nav-link">
+            <h1 class="title text-info">ROBOTiX Club</h1>
+          </a>
+          <h6><a class="nav-link" target="_blank"
+              href="https://www.google.com/maps/place/National+Institute+of+Technology,+Raipur/@21.2497222,81.6028404,17z/data=!3m1!4b1!4m5!3m4!1s0x3a28dde213f66723:0x21543965c50c43c7!8m2!3d21.2497222!4d81.6050291">
+              NIT Raipur<br>
               Great Eastern Rd, Amanaka, Raipur<br>
               Chhattisgarh - 492010, India.</a>
           </h6>
@@ -194,13 +202,13 @@
             </li>
             {% if not user.is_authenticated %}
             <li class="nav-item">
-              <a href="{% url 'users:account_login' %}"  class="nav-link">
+              <a href="{% url 'users:account_login' %}" class="nav-link">
                 SignUp/Login
               </a>
             </li>
             {% else %}
             <li class="nav-item">
-              <a href="{% url 'logout' %}"  class="nav-link">
+              <a href="{% url 'logout' %}" class="nav-link">
                 Logout
               </a>
             </li>
@@ -210,16 +218,24 @@
         <div class="col-md-3">
           <h3 class="title">Social Links:</h3>
           <div class="btn-wrapper profile">
-            <a target="_blank" href="https://www.instagram.com/robotix_nitrr" class="btn btn-icon btn-neutral btn-round btn-simple" data-toggle="tooltip" data-original-title="Follow us" target="_blank">
+            <a target="_blank" href="https://www.instagram.com/robotix_nitrr"
+              class="btn btn-icon btn-neutral btn-round btn-simple" data-toggle="tooltip"
+              data-original-title="Follow us" target="_blank">
               <i class="fab fa-instagram"></i>
             </a>
-            <a target="_blank" href="https://www.facebook.com/nitrrobots16/" class="btn btn-icon btn-neutral btn-round btn-simple" data-toggle="tooltip" data-original-title="Follow us" target="_blank">
+            <a target="_blank" href="https://www.facebook.com/nitrrobots16/"
+              class="btn btn-icon btn-neutral btn-round btn-simple" data-toggle="tooltip"
+              data-original-title="Follow us" target="_blank">
               <i class="fab fa-facebook-f"></i>
             </a>
-            <a target="_blank" href="https://in.linkedin.com/company/robotix-club-nit-raipur" class="btn btn-icon btn-neutral btn-round btn-simple" data-toggle="tooltip" data-original-title="Follow us" target="_blank">
+            <a target="_blank" href="https://in.linkedin.com/company/robotix-club-nit-raipur"
+              class="btn btn-icon btn-neutral btn-round btn-simple" data-toggle="tooltip"
+              data-original-title="Follow us" target="_blank">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a target="_blank" href="mailto:robotixclub@nitrr.ac.in" class="btn btn-icon btn-neutral btn-round btn-simple" data-toggle="tooltip" data-original-title="Mail us" target="_blank">
+            <a target="_blank" href="mailto:robotixclub@nitrr.ac.in"
+              class="btn btn-icon btn-neutral btn-round btn-simple" data-toggle="tooltip" data-original-title="Mail us"
+              target="_blank">
               <i class="fas fa-envelope"></i>
             </a>
           </div>
@@ -227,43 +243,45 @@
       </div>
     </div>
   </footer>
-    <div class="container">
-      <br>
-      <div class="row">
-        <div class="col-md-4">
-          <a href="" class="nav-link text-info" target="_blank" title="WEB TEAM ROBOTiX">&copy; 2019 All Rights Reserved.</a>
-        </div>
-        <div class="col-md-4">
-        <a href="{% url 'webteam' %}" class="nav-link text-info" target="_blank" title="WEB TEAM ROBOTiX"><i class="mrao-icons icon-world"></i>&nbsp;&nbsp;Version 2.0.0</a>
-        </div>
-        <div class="col-md-4">
-        </div>
+  <div class="container">
+    <br>
+    <div class="row">
+      <div class="col-md-4">
+        <a href="" class="nav-link text-info" target="_blank" title="WEB TEAM ROBOTiX">&copy; 2019 All Rights
+          Reserved.</a>
       </div>
-
+      <div class="col-md-4">
+        <a href="{% url 'webteam' %}" class="nav-link text-info" target="_blank" title="WEB TEAM ROBOTiX"><i
+            class="mrao-icons icon-world"></i>&nbsp;&nbsp;Version 2.0.0</a>
+      </div>
+      <div class="col-md-4">
+      </div>
     </div>
- <br>
-</div>
+
+  </div>
+  <br>
+  </div>
 
 
-<a href="#" id="scrollup" class="scrollup btn-info"><i class="mrao-icons icon-minimal-up active"></i></a>
+  <a href="#" id="scrollup" class="scrollup btn-info"><i class="mrao-icons icon-minimal-up active"></i></a>
 
-<script>
+  <script>
 
-</script>
+  </script>
 
 
-<!--   Core JS Files   -->
-<script src='{% static "assets/js/core/jquery.min.js" %}' type="text/javascript"></script>
-<script src='{% static "assets/js/core/popper.min.js" %}' type="text/javascript"></script>
-<script src='{% static "assets/js/core/bootstrap.min.js" %}' type="text/javascript"></script>
-<script src='{% static "assets/js/plugins/perfect-scrollbar.jquery.min.js" %}'></script>
-<script src='{% static "assets/js/plugins/bootstrap-switch.js" %}'></script>
-<script src='{% static "assets/js/plugins/nouislider.min.js" %}' type="text/javascript"></script>
-<!-- Chart JS -->
-<script src='{% static "assets/js/plugins/chartjs.min.js" %}'></script>
-<script src='{% static "assets/js/plugins/moment.min.js" %}'></script>
-<script src='{% static "assets/js/plugins/bootstrap-datetimepicker.js" %}' type="text/javascript"></script>
-<script src='{% static "assets/js/mrao-design.min.js" %}' type="text/javascript"></script>
+  <!--   Core JS Files   -->
+  <script src='{% static "assets/js/core/jquery.min.js" %}' type="text/javascript"></script>
+  <script src='{% static "assets/js/core/popper.min.js" %}' type="text/javascript"></script>
+  <script src='{% static "assets/js/core/bootstrap.min.js" %}' type="text/javascript"></script>
+  <script src='{% static "assets/js/plugins/perfect-scrollbar.jquery.min.js" %}'></script>
+  <script src='{% static "assets/js/plugins/bootstrap-switch.js" %}'></script>
+  <script src='{% static "assets/js/plugins/nouislider.min.js" %}' type="text/javascript"></script>
+  <!-- Chart JS -->
+  <script src='{% static "assets/js/plugins/chartjs.min.js" %}'></script>
+  <script src='{% static "assets/js/plugins/moment.min.js" %}'></script>
+  <script src='{% static "assets/js/plugins/bootstrap-datetimepicker.js" %}' type="text/javascript"></script>
+  <script src='{% static "assets/js/mrao-design.min.js" %}' type="text/javascript"></script>
 </body>
 
 </html>
